<resources>
    <string name="app_name">UNISC_PDM</string>

    <string name="btnTextAula1">Aula 1</string>

    <string name="btnTextAula2">Aula 2</string>

    <string name="btnTextAula3">Aula 3</string>
    <string name="btnTextAula3Questao1">Questão 1</string>
    <string name="ActiorBarTitleAula3Questao1">POUPANÇA</string>
    <string name="txtViewAula3Questao1ValorInicial">Valor Inicial:</string>
    <string name="edtViewAula3Questao1ValorInicial">Valor em R$. Ex.: 1700.00</string>
    <string name="txtViewAula3Questao1AplicacaoMensal">Aplicação Mensal:</string>
    <string name="edtViewAula3Questao1AplicacaoMensal">Ex.: 100.00</string>
    <string name="txtViewAula3Questao1TempoAplicacao">Tempo Aplicação:</string>
    <string name="edtViewAula3Questao1TempoAplicacao">Em meses</string>
    <string name="txtViewAula3Questao1Taxa">Taxa:</string>
    <string name="edtViewAula3Questao1Taxa">Ex.: 0.02</string>
    <string name="btnViewAula3Questao1Calcular">Calcular</string>

    <string name="btnTextAula3Questao2">Questao 2</string>
    <string name="btnTextAula3Questao3">Questao 3</string>
    <string name="btnTextAula3Questao4">Questao 4</string>

    <string name="ActiorBarTitleAula3Questao3">Quiz de trânsito</string>
    <string name="txtViewAula3Questao3NroQuestao">Questão 11 de 28</string>
    <string name="txtViewAula3Questao3Pergunta">Q11 - Qual o significado desta placa?</string>
    <string name="btnTextAula3Questao3Resposta1">Ponte a frente</string>
    <string name="btnTextAula3Questao3Resposta2">Estreitamento de pista</string>
    <string name="btnTextAula3Questao3Resposta3">Declive acentuado</string>
    <string name="btnTextAula3Questao3Resposta4">Redução de largura de veículos</string>
    <string name="btnTextAula3Questao3ProximaPergunta">Próxima pergunta</string>

    <string name="ActiorBarTitleAula3Questao4">BalaioDeLenha</string>
    <string name="txtViewAula3Questao4ConsumoTotal">Consumo total R$:</string>
    <string name="edtViewAula3Questao4ConsumoTotal">...</string>
    <string name="txtViewAula3Questao4CouvertArtistico">Couvert artistico R$:</string>
    <string name="edtViewAula3Questao4CouvertArtistico">...</string>
    <string name="txtViewAula3Questao4DividirContaPor">Dividir conta por:</string>
    <string name="edtViewAula3Questao4DividirContaPor">...</string>
    <string name="btnAula3Questao4Calcular">Calcular conta final</string>
    <string name="txtViewAula3Questao4TaxaDeServico">Taxa de Serviço (10%) R$:</string>
    <string name="edtViewAula3Questao4TaxaDeServico">...</string>
    <string name="txtViewAula3Questao4ContaTotal">Conta total R$:</string>
    <string name="edtViewAula3Questao4ContaTotal">...</string>
    <string name="txtViewAula3Questao4ValorPorPessoa">Valor por pessoa R$:</string>
    <string name="edtViewAula3Questao4ValorPorPessoa">...</string>

    <string name="btnTextAula4">Aula 4</string>
    <string name="btnAula4Contatos">CONTATOS</string>
    <string name="btnAula4Contatos2">CONTATOS 2</string>
    <string name="btnAula4Call">CALL</string>
    <string name="btnAula4Web">WEB</string>
    <string name="btnAula4PicIt">PIC IT</string>

    <string name="txtViewAula4Contato">Contato</string>
    <string name="txtViewAula4NomeContato">Nome:</string>
    <string name="txtViewAula4TelefoneContato">Telefone:</string>

    <string name="txtViewRevProvaI_Matricula">Matricula:</string>
    <string name="edtTextRevProvaI_Matricula">Matricula...</string>
    <string name="txtViewRevProvaI_Nome">Nome:</string>
    <string name="edtTextRevProvaI_Nome">Nome...</string>
    <string name="txtViewRevProvaI_Email">Email:</string>
    <string name="edtTextRevProvaI_Email">Email...</string>
    <string name="txtViewRevProvaI_Estado">Estado:</string>
    <string name="txtViewRevProvaI_Cidade">Cidade:</string>
    <string name="txtViewRevProvaI_Foto">Foto:</string>
    <string name="btnRevProvaI_CaptutarFoto">Capturar</string>
    <string name="btnRevProvaI_AdicionarAluno">Adicionar</string>

    <string name="txtViewRevProvaI_DadosAluno_Matricula">Matricula</string>
    <string name="txtViewRevProvaI_DadosAluno_Nome">Nome:</string>
    <string name="txtViewRevProvaI_DadosAluno_Email">Email:</string>
    <string name="txtViewRevProvaI_DadosAluno_Cidade">Cidade:</string>
    <string name="txtViewRevProvaI_DadosAluno_Estado">Estado:</string>

    <string name="txtViewDesafioExpressao">Expressão:</string>
    <string name="edtTextDesafioOperador1">Ex. 1.5</string>
    <string name="edtTextDesafioOperador2">Ex. 1.5</string>
    <string name="txtViewDesafioResultado">Resultado:</string>

    <string name="edtTextViewAula8InformeCEP">Informe CEP...</string>
    <string name="btnAula8BuscarCEP">BUSCAR CEP</string>
    <string name="txtViewAula8Logradouro">Logradouro...</string>
    <string name="txtViewAula8Complemento">Complemento...</string>
    <string name="txtViewAula8Bairro">Bairro...</string>
    <string name="txtViewAula8Localidade">Localidade...</string>
    <string name="txtViewAula8UF">UF...</string>
    <string name="btnAula8ConsultaWeather">CONSULTA WEATHER</string>
    <string name="txtViewAula8MediaTemperaturas">Média temperaturas:</string>
    <string name="txtViewAula8MediaUmidades">Média umidades:</string>
    <string name="txtViewAula8MediaPontosOrvalho">Média ponto orvalho:</string>
    <string name="txtViewAula8MediaPressao">Média pressão:</string>

    <string name="TxtViewAula9Ano">Ano:</string>
    <string name="EdtViewAula9Ano">2018</string>
    <string name="btnAula9Buscar">BUSCAR</string>
    <string name="btnAula9Adicionar">ADICIONAR</string>

    <string name="TxtViewAula9AddModelo">Modelo:</string>
    <string name="EdtViewAula9AddModelo">Informe modelo...</string>
    <string name="TxtViewAula9AddAno">Ano:</string>
    <string name="EdtViewAula9AddAno">Informe ano...</string>
    <string name="TxtViewAula9AddValor">Valor:</string>
    <string name="EdtViewAula9AddValor">Informe valor...</string>
    <string name="btnAula9AddSalvar">SALVAR</string>

    <string name="TxtViewAula9UpdateDeleteModelo">Modelo:</string>
    <string name="EdtViewAula9UpdateDeleteModelo">Informe modelo...</string>
    <string name="TxtViewAula9UpdateDeleteAno">Ano:</string>
    <string name="EdtViewAula9UpdateDeleteAno">Informe ano...</string>
    <string name="TxtViewAula9UpdateDeleteValor">Valor:</string>
    <string name="EdtViewAula9UpdateDeleteValor">Informe valor...</string>
    <string name="btnAula9UpdateDeleteExcluir">EXCLUIR</string>
    <string name="btnAula9UpdateDeleteAtualizar">ATUALIZAR</string>

    <string name="txtViewAula9LoginUsuario">Usuário:</string>
    <string name="edtTextAula9LoginUsuario">Informe usuário...</string>
    <string name="txtViewAula9LoginSenha">Senha:</string>
    <string name="edtTextAula9LoginSenha">Informe senha...</string>
    <string name="btnAula9Login">LOGIN</string>

</resources>
