<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Aula9AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/TxtViewAula9AddModelo"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EdtViewAula9AddModelo"
            android:id="@+id/EdtViewAula9AddModelo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/TxtViewAula9AddAno"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EdtViewAula9AddAno"
            android:id="@+id/EdtViewAula9AddAno"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/TxtViewAula9AddValor"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EdtViewAula9AddValor"
            android:id="@+id/EdtViewAula9AddValor"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAula9AddSalvar"
        android:id="@+id/btnAula9AddSalvar"
        android:onClick="btnAula9AddSalvarOnClick"
        />

</LinearLayout>