<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Aula8CEPActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtTextAula8CEP"
            android:hint="@string/edtTextViewAula8InformeCEP"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAula8BuscarCEP"
            android:onClick="btnAula8BuscarCEP"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtViewAula8Logradouro"
        android:textAlignment="center"
        android:id="@+id/txtViewAula8Logradouro"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtViewAula8Complemento"
        android:textAlignment="center"
        android:id="@+id/txtViewAula8Complemento"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtViewAula8Bairro"
        android:textAlignment="center"
        android:id="@+id/txtViewAula8Bairro"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtViewAula8Localidade"
        android:textAlignment="center"
        android:id="@+id/txtViewAula8Localidade"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtViewAula8UF"
        android:textAlignment="center"
        android:id="@+id/txtViewAula8UF"
        />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prgBarAula8"
        android:max="100"
        android:progress="5"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAula8ConsultaWeather"
        android:onClick="btnAula8Weather"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="3" >
        <TextView
            android:text="@string/txtViewAula8MediaTemperaturas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        <TextView
            android:id="@+id/txtViewAula8Media_Temperaturas"
            android:text="..."
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="3" >
        <TextView
            android:text="@string/txtViewAula8MediaUmidades"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        <TextView
            android:id="@+id/txtViewAula8Media_Umidades"
            android:text="..."
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="3" >
        <TextView
            android:text="@string/txtViewAula8MediaPontosOrvalho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        <TextView
            android:id="@+id/txtViewAula8Media_PontoOrvalho"
            android:text="..."
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:weightSum="3" >
        <TextView
            android:text="@string/txtViewAula8MediaPressao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
        <TextView
            android:id="@+id/txtViewAula8Media_Pressao"
            android:text="..."
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <ListView
        android:id="@+id/lstViewAula8Weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>