<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Aula9MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAula9Adicionar"
            android:id="@+id/btnAula9Adicionar"
            android:onClick="btnAula9AdicionarOnClick"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TxtViewAula9Ano"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/EdtViewAula9Ano"
            android:id="@+id/EdtViewAula9Ano"
            android:layout_weight="2"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAula9Buscar"
            android:id="@+id/btnAula9Buscar"
            android:onClick="btnAula9BuscarOnClick"
            android:layout_weight="2"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/lstViewAula9Carros"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>