<?xml version="1.0" encoding="utf-8"?>
<!-- <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTextAula1"
        android:id="@+id/btnAula1"
        android:onClick="btnAula1Click"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTextAula2"
        android:id="@+id/btnAula2"
        android:onClick="btnAula2Click"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTextAula3"
        android:id="@+id/btnAula3"
        android:onClick="btnAula3Click"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTextAula4"
        android:id="@+id/btnAula4"
        android:onClick="btnAula4Click"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aula 6"
        android:id="@+id/btnAula6"
        android:onClick="btnAula6Click"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aula 7"
        android:id="@+id/btnAula7"
        android:onClick="btnAula7Click"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Revisão Prova I"
        android:id="@+id/btnRevisaoProvaI"
        android:onClick="btnAulaRevisaoProvaI"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Desafio"
        android:id="@+id/btnDesafio"
        android:onClick="btnDesafio"
        />

</LinearLayout>